--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ title: 3D Kinematics of eye movements
 	<b>[1]</b> Edward H. Adelson and James R. Bergen. Spatiotemporal energy models for the perception of motion. J. Opt. Soc. Am. A, 2(2):284–299, Feb 1985.<br>
 	<b>[2]</b> Thomas Haslwanter. Mathematics of three-dimensional eye rotations. Vision Research, 35(12):1727–1739, 1995.<br>
 	<b>[3]</b> Christian Quaia and Lance M. Optican. Three-dimensional rotations of the eye. 2001.<br>
-	<b>[4]</b> DouglasTweedandTutisVilis.Geometricrelationsofeyepositionandvelocityvectorsduringsaccades.
+	<b>[4]</b> Douglas Tweed and Tutis Vilis. Geometric relations of eye position and velocity vectors during saccades.
 		Vision research, 30:111–27, 02 1990.<br>
 	<b>[5]</b> B. L. van der Waerden. Hamilton’s discovery of quaternions. Mathematics Magazine, 49(5):227–234,
 	1976.<br>
