--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ title: 3D Kinematics of eye movements
 					 90 deg rotation about the eye-fixed axis e3</b></figcaption>
 			</figure>	
 
-			<p>To understand this better, we look at above figure taken from href="https://www.sciencedirect.com/science/article/pii/004269899400257M">THOMAS HASLWANTER. (1995) <i>Mathematics of three-dimensional eye rotations</i></a></cite>. Inverting the sequence of two rotations about space-fixed axes changes the final orientation of the 
+			<p>To understand this better, we look at above figure taken from <cite><a href="https://www.sciencedirect.com/science/article/pii/004269899400257M">THOMAS HASLWANTER. (1995) <i>Mathematics of three-dimensional eye rotations</i></a></cite>. Inverting the sequence of two rotations about space-fixed axes changes the final orientation of the 
 				object, even if it is rotated by the same degree [2]. The final orientation of the figure in [A] differs from that of [B] due to the non 
 				commutativity of the Rotation Matrix.</p>
 
