--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@ title: 3D Kinematics of eye movements
 				directed y-axis is the <i>pitch</i> that appears as the upward or downward gaze. Finally, the rotation around the vertically directed z-axis is the <i>yaw</i> 
 				leading to the sideways gaze. This is visualised below.
 			</p>
+			<div>
+				<figure>
+						<img src="fig1.gif" alt="Upwards and downward gaze [4]" >
+						<figcaption><center><b>(1). Upwards and downward gaze <cite>[4]</cite></b></center></figcaption>
+				</figure>
+
+				<figure>
+						<img src="fig2.gif" alt="Sideways Gaze [4]" >
+						<figcaption><center><b>(2). Sideways Gaze <cite>[4]</cite></b></center></figcaption>
+				</figure>
+			</div>
 	
-			<figure>
-					<img src="fig1.gif" alt="Upwards and downward gaze [4]" >
-					<figcaption><center><b>(1). Upwards and downward gaze <cite>[4]</cite></b></center></figcaption>
-			</figure>
-			
-			<figure>
-					<img src="fig2.gif" alt="Sideways Gaze [4]" >
-					<figcaption><center><b>(2). Sideways Gaze <cite>[4]</cite></b></center></figcaption>
-			</figure>
-		
 			<figure>
 					<img src="fig3.gif" alt="Torsional Rotations [4]" >
 					<figcaption><center><b>(3). Torsional Rotations <cite>[4]</cite></b></center></figcaption>
@@ -74,7 +75,7 @@ title: 3D Kinematics of eye movements
 							    [B] A 90 deg rotation about the horizontal axis h2, followed by a 
 							    90 deg rotation about the vertical axis h3. 
 							    [C] A 90 deg rotation about the eye-fixed axis e2, followed by a 
-							    90 deg rotation about the eye-fixed axis e3" style="width:120%">
+							    90 deg rotation about the eye-fixed axis e3" style="width:80%">
 				 <figcaption><b>(4). <cite>[2]</cite> [A] 90 deg rotation about the vertical axis h3, 
 							    followed by a 90 deg rotation about the horizontal axis h2.<br>
 							    [B] A 90 deg rotation about the horizontal axis h2, followed by a 
