--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: 3D Kinematics of eye movements
 				directed y-axis is the <i>pitch</i> that appears as the upward or downward gaze. Finally, the rotation around the vertically directed z-axis is the <i>yaw</i> 
 				leading to the sideways gaze. This is visualised below.
 			</p>
-			<div>
+			<div style = "display: flex;">
 				<figure>
 						<img src="fig1.gif" alt="Upwards and downward gaze [4]" >
 						<figcaption><center><b>(1). Upwards and downward gaze <cite>[4]</cite></b></center></figcaption>
