--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@ title: 3D Kinematics of eye movements
 			</p>
 			<div style = "display: flex;">
 				<figure>
-						<img src="fig1.gif" alt="Upwards and downward gaze [4]" >
+						<img src="fig1.gif" alt="Upwards and downward gaze [4]" style="width:50%" >
 						<figcaption><center><b>(1). Upwards and downward gaze <cite>[4]</cite></b></center></figcaption>
 				</figure>
 
 				<figure>
-						<img src="fig2.gif" alt="Sideways Gaze [4]" >
+						<img src="fig2.gif" alt="Sideways Gaze [4]" style="width:50%" >
 						<figcaption><center><b>(2). Sideways Gaze <cite>[4]</cite></b></center></figcaption>
 				</figure>
 			</div>
 	
 			<figure>
-					<img src="fig3.gif" alt="Torsional Rotations [4]" >
+					<img src="fig3.gif" alt="Torsional Rotations [4]" style="width:50%" >
 					<figcaption><center><b>(3). Torsional Rotations <cite>[4]</cite></b></center></figcaption>
 			</figure>
 					<div id="content" class="center">
