--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ title: 3D Kinematics of eye movements
 							    [B] A 90 deg rotation about the horizontal axis h2, followed by a 
 							    90 deg rotation about the vertical axis h3. 
 							    [C] A 90 deg rotation about the eye-fixed axis e2, followed by a 
-							    90 deg rotation about the eye-fixed axis e3" style="width:80% display: block; margin-left: auto; margin-right: auto;">
+							    90 deg rotation about the eye-fixed axis e3" style="width:80%">
 				 <figcaption><b>(4). <cite>[2]</cite> [A] 90 deg rotation about the vertical axis h3, 
 							    followed by a 90 deg rotation about the horizontal axis h2.<br>
 							    [B] A 90 deg rotation about the horizontal axis h2, followed by a 
@@ -95,7 +95,7 @@ title: 3D Kinematics of eye movements
 		<p><i>The proposition that for any head position and any direction of gaze the eye always assumes the same unique position, resulting in the fixation point
 			being focused on the fovea. The orientation is always the same no matter where the eye came from.</i></p>
 		<figure>
-			<img src="donder.png" alt="Donder’s Law" style="width:50%">
+			<img src="donder.png" alt="Donder’s Law" style="width:50% display: block; margin-left: auto; margin-right: auto;"">
 			<figcaption><center><b>(5). Donder’s Law <cite>[4]</cite></b></center></figcaption>
 		</figure>
 		
