--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ title: 3D Kinematics of eye movements
 					   
 		 \[ q = \cos(\theta/2) + \sin(\theta/2)\left( n_x\hat{i} + n_y\hat{j} + n_z\hat{k} \right)\]			   
 	
-		<p>Further description and interactive videos for in depth understanding of quaternions can be found on <a href="{{https://eater.net/quaternions }}"> the explorable video series webpage</a> by Ben Eater.</p>
+		<p>Further description and interactive videos for in depth understanding of quaternions can be found on <a href="https://eater.net/quaternions"> the explorable video series webpage</a> by Ben Eater.</p>
 	
 	<h2>Rotation Vectors</h2>
 		<p>To make the treatment simpler, we notice that the scalar-component of a unit quaternion \( (q_0) \) does not contain any additional information, that is not already given by the vector part [2] .
@@ -209,7 +209,7 @@ title: 3D Kinematics of eye movements
 		as the Listings plane </p>
 	
 	<h1>Three Dimensional Rotations According to Lising's law</h1>
-		<p>The <a href="{{https://github.com/nehabinish/Three-dimensional-eye-rotations}}"> GitHub repository</a> consists of a set of source code that allows users to simulate the initial and final position of the of the eye taking
+		<p>The <a href="https://github.com/nehabinish/Three-dimensional-eye-rotations">GitHub repository</a> consists of a set of source code that allows users to simulate the initial and final position of the of the eye taking
 		into account Listings and Donder's law. The program also allows the users to visualise the final complete rotational vectors to check if they 
 			lie within the Listings plane.</p>
 						
