--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ title: 3D Kinematics of eye movements
 	
 	<h2>Quaternions</h2>
 		<p>To visualise vectors in more than three dimensions, we make use of quaternion, <i>q</i> which uniquely characterises a rotation by an angle  \( \theta \) about an axis  \( \hat{n} \).
-			Such a number system extends the complex numbers and is given by equation 5.</p>
+			Such a number system extends the complex numbers.</p>
 		<figure>
 			<img src="quat.png" alt=" Quaternion [5]" style="width:50%; display: block; margin-left: auto; margin-right: auto;">
 			<figcaption><center><b>(8). Quaternion  <cite>[5]</cite></b></center></figcaption>
