--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: 3D Kinematics of eye movements
 		<p>Any rigid body is able to move freely in three dimensional space using six degrees of freedom. 
 			Translational motion along the three orthogonal axis, correspond to three degrees of motion and the remaining three accounts for 
 			the rotation of the rigid body around the three axes. The eye is such a rigid body.</p>
-		<p> We try and further our understanding of the rotational components of eye movements assuming that the translational components are absent an that the head is stationary </p>
+		<p> We try and further our understanding of the rotational components of eye movements assuming that the translational components are absent and that the head is stationary </p>
 
 		<h2>Decomposing Three-Dimensional Rotations</h2>
 
