changed references to ordered list

--- a/index.html
+++ b/index.html
@@ -202,14 +202,16 @@ The <a href="https://github.com/nehabinish/Three-dimensional-eye-rotations">GitH
 
 <h1>References</h1>
 
-<p>
-<b>[1]</b> Adelson, E. H., & Bergen, J. R. (1985). Spatiotemporal energy models for the perception of motion. JOSA A, 2(2), 284–299.<br>
-<b>[2]</b> Haslwanter, T. (1995). Mathematics of three-dimensional eye rotations. Vision Research, 35(12), 1727–1739.<br>
-<b>[3]</b> Quaia, C., & Optican, L. M. (2001). Three-dimensional rotations of the eye.<br>
-<b>[4]</b> Tweed, D., & Vilis, T. (1990). Geometric relations of eye position and velocity vectors during saccades. Vision Research, 30, 111–127.<br>
-<b>[5]</b> van der Waerden, B. L. (1976). Hamilton’s discovery of quaternions. Mathematics Magazine, 49(5), 227–234.<br>
-<b>[6]</b> Wikipedia contributors. Euler’s rotation theorem — Wikipedia.<br>
-<b>[7]</b> Wikipedia contributors. Rotation matrix — Wikipedia.
-</p>
+<h1>References</h1>
+
+<ol>
+  <li>Adelson, E. H., & Bergen, J. R. (1985). <i>Spatiotemporal energy models for the perception of motion</i>. <i>JOSA A</i>, <b>2</b>(2), 284–299.</li>
+  <li>Haslwanter, T. (1995). <i>Mathematics of three-dimensional eye rotations</i>. <i>Vision Research</i>, <b>35</b>(12), 1727–1739.</li>
+  <li>Quaia, C., & Optican, L. M. (2001). <i>Three-dimensional rotations of the eye</i>.</li>
+  <li>Tweed, D., & Vilis, T. (1990). <i>Geometric relations of eye position and velocity vectors during saccades</i>. <i>Vision Research</i>, <b>30</b>, 111–127.</li>
+  <li>van der Waerden, B. L. (1976). <i>Hamilton’s discovery of quaternions</i>. <i>Mathematics Magazine</i>, <b>49</b>(5), 227–234.</li>
+  <li>Wikipedia contributors. <i>Euler’s rotation theorem</i> — <i>Wikipedia</i>.</li>
+  <li>Wikipedia contributors. <i>Rotation matrix</i> — <i>Wikipedia</i>.</li>
+</ol>
 
 </div>
