changed citation style

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@ Sure! Here’s your entire HTML content rewritten so every paragraph <p> uses st
 layout: default
 title: 3D Kinematics of Eye Movements
 ---
+<style>
+  cite {
+    vertical-align: super;
+    font-size: smaller;
+    line-height: 1;
+  }
+</style>
 
-<div class="blurb">
+<div class="blurb" style="text-align: justify;">
 
 <h1>Eye Movements</h1>
 
