change in line citation

--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@ $$
 </figcaption>
 </figure>	
 
-<p style="text-align: justify;">To understand this better, we look at the above figure taken from <cite><a href="https://www.sciencedirect.com/science/article/pii/004269899400257M"> Thomas Haslwanter. (1995) <i>Mathematics of three-dimensional eye rotations</i></a></cite>. Inverting the sequence of two rotations about space-fixed axes changes the final orientation of the 
+<p style="text-align: justify;">To understand this better, we look at the above figure taken from <cite>
+  <a href="https://www.sciencedirect.com/science/article/pii/004269899400257M" class="no-raise">
+    Thomas Haslwanter. (1995) <i>Mathematics of three-dimensional eye rotations</i>
+  </a>
+</cite>. Inverting the sequence of two rotations about space-fixed axes changes the final orientation of the 
 	object, even if it is rotated by the same degree [2]. The final orientation of the figure in [A] differs from that of [B] due to the non 
 	commutativity of the Rotation Matrix.</p>
 
@@ -122,7 +126,7 @@ $$
 
 <figure>
 	<img src="figures/donder.png" alt="Donder’s Law" style="width:50%; display: block; margin-left: auto; margin-right: auto;">
-	<figcaption><center><b>(5). Donder’s Law <cite>4</cite></b></center></figcaption>
+	<figcaption><center><b>(5) Donder’s Law <cite>4</cite></b></center></figcaption>
 </figure>
 		
 <p style="text-align: justify;">In order to implement Donder’s law, it is important to find a unique method to reach every final orientation or the final eye position. If the previously
@@ -138,7 +142,7 @@ $$
 
 <figure>
 	<img src="figures/gimbal.png" alt="Demonstration of the Gimbal Co-ordinate system [3]" style="width:80%; display: block; margin-left: auto; margin-right: auto;">
-	<figcaption><center><b>(6). Demonstration of the Gimbal Co-ordinate system  <cite>3</cite></center></b></figcaption>
+	<figcaption><center><b>(6) Demonstration of the Gimbal Co-ordinate system  <cite>3</cite></center></b></figcaption>
 </figure>	
 	
 <p style="text-align: justify;">Nested Gimbal systems such as the ones mentioned below, fix a nesting order for the decomposition of a three-dimensional rotation into three consecutive rotations. 
@@ -167,7 +171,7 @@ This is rotation along an orthogonal axis of the eye.</p>
 		
 <figure>
 	<img src="figures/euler.png" alt=" Demonstration of the Euler Fixed Axis Theorem [6]" style="width:50%; display: block; margin-left: auto; margin-right: auto;">
-	<figcaption><center><b>(7). Demonstration of the Euler Fixed Axis Theorem  <cite>6</cite></b></center></figcaption>			
+	<figcaption><center><b>(7) Demonstration of the Euler Fixed Axis Theorem  <cite>6</cite></b></center></figcaption>			
 </figure>	
 	
 <p style="text-align: justify;">Every final eye position then can then be described by a unique rotation vector that denotes a 
@@ -182,7 +186,7 @@ The rotation vectors will also have horizontal, vertical and torsional component
 
 		<figure>
 			<img src="figures/quat.png" alt=" Quaternion [5]" style="width:50%; display: block; margin-left: auto; margin-right: auto;">
-			<figcaption><center><b>(8). Quaternion  <cite>5</cite></b></center></figcaption>
+			<figcaption><center><b>(8) Quaternion  <cite>5</cite></b></center></figcaption>
 		</figure>
 				 
 		 \[ q = q_0 + \left(q_1\hat{i} + q_2\hat{j} + q_3\hat{k} \right) \]
@@ -212,7 +216,7 @@ The rotation vectors will also have horizontal, vertical and torsional component
 	
 	<figure>
 		<img src="figures/listing.png" alt="Listing’s plane [4]" style="width:50%; display: block; margin-left: auto; margin-right: auto;">
-		<figcaption><center><b>(9). Listing’s plane  <cite>4</cite></b></center></figcaption>
+		<figcaption><center><b>(9) Listing’s plane  <cite>4</cite></b></center></figcaption>
 	</figure>
 	
 	<p style="text-align: justify;">The reference position for a dataset that describes the Listings plane as its displacement plane is called the primary position. 
