--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ The rotation vectors will also have horizontal, vertical and torsional component
 		described by Listings using the eye-fixed axes such Helmholtz sequence and Fick’s sequence of rotations by the introduction of false torsion
 		along the line of sight.</p>
 	
-	<p style="text-align: justify;">However, the most simple way to implement the Listings law would be using a co-ordinate axis with origin at the primary position (1,0,0), 
+	<p style="text-align: justify;">However, the most simple way to implement the Listings law would be using a co-ordinate axis with origin at the primary position (1, 0, 0) 
 		where the torsional component of the head is held at zero.</p>
 
 	<p style="text-align: justify;">One of the advantages of using quaternion or rotation vector formalism is the ease of implementing listings law with these tools. 
