--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ $$
 </figcaption>
 </figure>	
 
-<p style="text-align: justify;">To understand this better, we look at the above figure taken from Thomas Haslwanter. (1995) <i>Mathematics of three-dimensional eye rotations</i><cite>
+<p style="text-align: justify;">To understand this better, we look at the above figure taken from Thomas Haslwanter (1995) <i>Mathematics of three-dimensional eye rotations</i><cite>
   <a href="https://www.sciencedirect.com/science/article/pii/004269899400257M">2</a></cite>. Inverting the sequence of two rotations about space-fixed axes changes the final orientation of the 
 	object, even if it is rotated by the same degree [2]. The final orientation of the figure in [A] differs from that of [B] due to the non 
 	commutativity of the Rotation Matrix.</p>
